WritingMachine 2.0/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement SEMI
Rule 2     program -> statement
Rule 3     program -> program statement SEMI
Rule 4     program -> program statement
Rule 5     statement -> expression
Rule 6     statement -> procedure_statement
Rule 7     statement -> call_statement
Rule 8     statement -> def_statement
Rule 9     statement -> put_statement
Rule 10    statement -> add_statement
Rule 11    statement -> continueup_statement
Rule 12    statement -> continuedown_statement
Rule 13    statement -> continueright_statement
Rule 14    statement -> continueleft_statement
Rule 15    statement -> turnright_statement
Rule 16    statement -> turnleft_statement
Rule 17    statement -> pos_statement
Rule 18    statement -> posx_statement
Rule 19    statement -> posy_statement
Rule 20    statement -> usecolor_statement
Rule 21    statement -> down_statement
Rule 22    statement -> up_statement
Rule 23    statement -> beginning_statement
Rule 24    statement -> for_statement
Rule 25    statement -> case_statement
Rule 26    statement -> repeat_statement
Rule 27    statement -> while_statement
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression MULT_OP expression
Rule 31    expression -> expression DIV_OP expression
Rule 32    expression -> expression LT expression
Rule 33    expression -> expression GT expression
Rule 34    expression -> expression EQUALS expression
Rule 35    def_statement -> DEF LPAREN ID COMMA statement RPAREN
Rule 36    put_statement -> PUT LPAREN ID COMMA statement RPAREN
Rule 37    add_statement -> ADD LPAREN ID RPAREN
Rule 38    add_statement -> ADD LPAREN ID COMMA statement RPAREN
Rule 39    continueup_statement -> CONTINUEUP statement
Rule 40    continuedown_statement -> CONTINUEDOWN statement
Rule 41    continueright_statement -> CONTINUERIGHT statement
Rule 42    continueleft_statement -> CONTINUELEFT statement
Rule 43    turnright_statement -> TURNRIGHT statement
Rule 44    turnleft_statement -> TURNLEFT statement
Rule 45    pos_statement -> POS LPAREN statement COMMA statement RPAREN
Rule 46    posx_statement -> POSX statement
Rule 47    posy_statement -> POSY statement
Rule 48    usecolor_statement -> USECOLOR statement
Rule 49    down_statement -> DOWN
Rule 50    up_statement -> UP
Rule 51    beginning_statement -> BEGINNING
Rule 52    expression -> EQUAL LPAREN statement COMMA statement RPAREN
Rule 53    expression -> AND LPAREN statement COMMA statement RPAREN
Rule 54    expression -> OR LPAREN statement COMMA statement RPAREN
Rule 55    expression -> GREATER LPAREN statement COMMA statement RPAREN
Rule 56    expression -> SMALLER LPAREN statement COMMA statement RPAREN
Rule 57    expression -> SUBSTR LPAREN statement COMMA statement RPAREN
Rule 58    expression -> RANDOM LPAREN statement RPAREN
Rule 59    expression -> MULT LPAREN statement COMMA statement RPAREN
Rule 60    expression -> DIV LPAREN statement COMMA statement RPAREN
Rule 61    expression -> SUM LPAREN statement COMMA statement RPAREN
Rule 62    expression -> LPAREN expression_list RPAREN
Rule 63    expression_bracket -> LBRACKET expression_list RBRACKET
Rule 64    expression_bracket -> LBRACKET expression_list SEMI RBRACKET
Rule 65    expression -> BOOLEAN
Rule 66    expression_list -> statement
Rule 67    expression_list -> expression_list statement
Rule 68    expression -> NUMBER
Rule 69    expression -> ID
Rule 70    for_statement -> FOR ID LPAREN expression TO expression RPAREN LOOP LBRACKET program RBRACKET END LOOP
Rule 71    execute_statement -> statement
Rule 72    case_statement -> CASE ID when_clauses END CASE
Rule 73    case_statement -> CASE ID when_clauses ELSE LBRACKET program RBRACKET END CASE
Rule 74    when_clauses -> when_clause
Rule 75    when_clauses -> when_clauses when_clause
Rule 76    when_clause -> WHEN expression THEN LBRACKET program RBRACKET
Rule 77    repeat_statement -> REPEAT LBRACKET program RBRACKET UNTIL LBRACKET statement RBRACKET
Rule 78    while_statement -> WHILE LBRACKET statement RBRACKET LBRACKET program RBRACKET WHEND
Rule 79    procedure_statement -> PROC ID LPAREN parameter_list RPAREN LBRACKET program RBRACKET SEMI END
Rule 80    call_statement -> CALL ID LPAREN parameter_list RPAREN
Rule 81    parameter_list -> expression
Rule 82    parameter_list -> parameter_list COMMA expression
Rule 83    parameter_list -> <empty>

Terminals, with rules where they appear

ADD                  : 37 38
AND                  : 53
BEGINNING            : 51
BOOLEAN              : 65
CALL                 : 80
CASE                 : 72 72 73 73
COMMA                : 35 36 38 45 52 53 54 55 56 57 59 60 61 82
COMMENT              : 
CONTINUEDOWN         : 40
CONTINUELEFT         : 42
CONTINUERIGHT        : 41
CONTINUEUP           : 39
DEF                  : 35
DIV                  : 60
DIV_OP               : 31
DOWN                 : 49
ELSE                 : 73
END                  : 70 72 73 79
EQUAL                : 52
EQUALS               : 34
FOR                  : 70
GREATER              : 55
GT                   : 33
ID                   : 35 36 37 38 69 70 72 73 79 80
LBRACKET             : 63 64 70 73 76 77 77 78 78 79
LOOP                 : 70 70
LPAREN               : 35 36 37 38 45 52 53 54 55 56 57 58 59 60 61 62 70 79 80
LT                   : 32
MINUS                : 29
MULT                 : 59
MULT_OP              : 30
NUMBER               : 68
OR                   : 54
PLUS                 : 28
POS                  : 45
POSX                 : 46
POSY                 : 47
PROC                 : 79
PUT                  : 36
RANDOM               : 58
RBRACKET             : 63 64 70 73 76 77 77 78 78 79
REPEAT               : 77
RPAREN               : 35 36 37 38 45 52 53 54 55 56 57 58 59 60 61 62 70 79 80
SEMI                 : 1 3 64 79
SMALLER              : 56
SUBSTR               : 57
SUM                  : 61
THEN                 : 76
TO                   : 70
TURNLEFT             : 44
TURNRIGHT            : 43
UNTIL                : 77
UP                   : 50
USECOLOR             : 48
WHEN                 : 76
WHEND                : 78
WHILE                : 78
error                : 

Nonterminals, with rules where they appear

add_statement        : 10
beginning_statement  : 23
call_statement       : 7
case_statement       : 25
continuedown_statement : 12
continueleft_statement : 14
continueright_statement : 13
continueup_statement : 11
def_statement        : 8
down_statement       : 21
execute_statement    : 
expression           : 5 28 28 29 29 30 30 31 31 32 32 33 33 34 34 70 70 76 81 82
expression_bracket   : 
expression_list      : 62 63 64 67
for_statement        : 24
parameter_list       : 79 80 82
pos_statement        : 17
posx_statement       : 18
posy_statement       : 19
procedure_statement  : 6
program              : 3 4 70 73 76 77 78 79 0
put_statement        : 9
repeat_statement     : 26
statement            : 1 2 3 4 35 36 38 39 40 41 42 43 44 45 45 46 47 48 52 52 53 53 54 54 55 55 56 56 57 57 58 59 59 60 60 61 61 66 67 71 77 78
turnleft_statement   : 16
turnright_statement  : 15
up_statement         : 22
usecolor_statement   : 20
when_clause          : 74 75
when_clauses         : 72 73 75
while_statement      : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement SEMI
    (2) program -> . statement
    (3) program -> . program statement SEMI
    (4) program -> . program statement
    (5) statement -> . expression
    (6) statement -> . procedure_statement
    (7) statement -> . call_statement
    (8) statement -> . def_statement
    (9) statement -> . put_statement
    (10) statement -> . add_statement
    (11) statement -> . continueup_statement
    (12) statement -> . continuedown_statement
    (13) statement -> . continueright_statement
    (14) statement -> . continueleft_statement
    (15) statement -> . turnright_statement
    (16) statement -> . turnleft_statement
    (17) statement -> . pos_statement
    (18) statement -> . posx_statement
    (19) statement -> . posy_statement
    (20) statement -> . usecolor_statement
    (21) statement -> . down_statement
    (22) statement -> . up_statement
    (23) statement -> . beginning_statement
    (24) statement -> . for_statement
    (25) statement -> . case_statement
    (26) statement -> . repeat_statement
    (27) statement -> . while_statement
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULT_OP expression
    (31) expression -> . expression DIV_OP expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression EQUALS expression
    (52) expression -> . EQUAL LPAREN statement COMMA statement RPAREN
    (53) expression -> . AND LPAREN statement COMMA statement RPAREN
    (54) expression -> . OR LPAREN statement COMMA statement RPAREN
    (55) expression -> . GREATER LPAREN statement COMMA statement RPAREN
    (56) expression -> . SMALLER LPAREN statement COMMA statement RPAREN
    (57) expression -> . SUBSTR LPAREN statement COMMA statement RPAREN
    (58) expression -> . RANDOM LPAREN statement RPAREN
    (59) expression -> . MULT LPAREN statement COMMA statement RPAREN
    (60) expression -> . DIV LPAREN statement COMMA statement RPAREN
    (61) expression -> . SUM LPAREN statement COMMA statement RPAREN
    (62) expression -> . LPAREN expression_list RPAREN
    (65) expression -> . BOOLEAN
    (68) expression -> . NUMBER
    (69) expression -> . ID
    (79) procedure_statement -> . PROC ID LPAREN parameter_list RPAREN LBRACKET program RBRACKET SEMI END
    (80) call_statement -> . CALL ID LPAREN parameter_list RPAREN
    (35) def_statement -> . DEF LPAREN ID COMMA statement RPAREN
    (36) put_statement -> . PUT LPAREN ID COMMA statement RPAREN
    (37) add_statement -> . ADD LPAREN ID RPAREN
    (38) add_statement -> . ADD LPAREN ID COMMA statement RPAREN
    (39) continueup_statement -> . CONTINUEUP statement
    (40) continuedown_statement -> . CONTINUEDOWN statement
    (41) continueright_statement -> . CONTINUERIGHT statement
    (42) continueleft_statement -> . CONTINUELEFT statement
    (43) turnright_statement -> . TURNRIGHT statement
    (44) turnleft_statement -> . TURNLEFT statement
    (45) pos_statement -> . POS LPAREN statement COMMA statement RPAREN
    (46) posx_statement -> . POSX statement
    (47) posy_statement -> . POSY statement
    (48) usecolor_statement -> . USECOLOR statement
    (49) down_statement -> . DOWN
    (50) up_statement -> . UP
    (51) beginning_statement -> . BEGINNING
    (70) for_statement -> . FOR ID LPAREN expression TO expression RPAREN LOOP LBRACKET program RBRACKET END LOOP
    (72) case_statement -> . CASE ID when_clauses END CASE
    (73) case_statement -> . CASE ID when_clauses ELSE LBRACKET program RBRACKET END CASE
    (77) repeat_statement -> . REPEAT LBRACKET program RBRACKET UNTIL LBRACKET statement RBRACKET
    (78) while_statement -> . WHILE LBRACKET statement RBRACKET LBRACKET program RBRACKET WHEND

    EQUAL           shift and go to state 26
    AND             shift and go to state 28
    OR              shift and go to state 29
    GREATER         shift and go to state 30
    SMALLER         shift and go to state 31
    SUBSTR          shift and go to state 32
    RANDOM          shift and go to state 33
    MULT            shift and go to state 34
    DIV             shift and go to state 35
    SUM             shift and go to state 36
    LPAREN          shift and go to state 27
    BOOLEAN         shift and go to state 37
    NUMBER          shift and go to state 38
    ID              shift and go to state 39
    PROC            shift and go to state 40
    CALL            shift and go to state 41
    DEF             shift and go to state 42
    PUT             shift and go to state 43
    ADD             shift and go to state 44
    CONTINUEUP      shift and go to state 45
    CONTINUEDOWN    shift and go to state 46
    CONTINUERIGHT   shift and go to state 47
    CONTINUELEFT    shift and go to state 48
    TURNRIGHT       shift and go to state 49
    TURNLEFT        shift and go to state 50
    POS             shift and go to state 51
    POSX            shift and go to state 52
    POSY            shift and go to state 53
    USECOLOR        shift and go to state 54
    DOWN            shift and go to state 55
    UP              shift and go to state 56
    BEGINNING       shift and go to state 57
    FOR             shift and go to state 58
    CASE            shift and go to state 59
    REPEAT          shift and go to state 60
    WHILE           shift and go to state 61

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3
    procedure_statement            shift and go to state 4
    call_statement                 shift and go to state 5
    def_statement                  shift and go to state 6
    put_statement                  shift and go to state 7
    add_statement                  shift and go to state 8
    continueup_statement           shift and go to state 9
    continuedown_statement         shift and go to state 10
    continueright_statement        shift and go to state 11
    continueleft_statement         shift and go to state 12
    turnright_statement            shift and go to state 13
    turnleft_statement             shift and go to state 14
    pos_statement                  shift and go to state 15
    posx_statement                 shift and go to state 16
    posy_statement                 shift and go to state 17
    usecolor_statement             shift and go to state 18
    down_statement                 shift and go to state 19
    up_statement                   shift and go to state 20
    beginning_statement            shift and go to state 21
    for_statement                  shift and go to state 22
    case_statement                 shift and go to state 23
    repeat_statement               shift and go to state 24
    while_statement                shift and go to state 25

state 1

    (0) S' -> program .
    (3) program -> program . statement SEMI
    (4) program -> program . statement
    (5) statement -> . expression
    (6) statement -> . procedure_statement
    (7) statement -> . call_statement
    (8) statement -> . def_statement
    (9) statement -> . put_statement
    (10) statement -> . add_statement
    (11) statement -> . continueup_statement
    (12) statement -> . continuedown_statement
    (13) statement -> . continueright_statement
    (14) statement -> . continueleft_statement
    (15) statement -> . turnright_statement
    (16) statement -> . turnleft_statement
    (17) statement -> . pos_statement
    (18) statement -> . posx_statement
    (19) statement -> . posy_statement
    (20) statement -> . usecolor_statement
    (21) statement -> . down_statement
    (22) statement -> . up_statement
    (23) statement -> . beginning_statement
    (24) statement -> . for_statement
    (25) statement -> . case_statement
    (26) statement -> . repeat_statement
    (27) statement -> . while_statement
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULT_OP expression
    (31) expression -> . expression DIV_OP expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression EQUALS expression
    (52) expression -> . EQUAL LPAREN statement COMMA statement RPAREN
    (53) expression -> . AND LPAREN statement COMMA statement RPAREN
    (54) expression -> . OR LPAREN statement COMMA statement RPAREN
    (55) expression -> . GREATER LPAREN statement COMMA statement RPAREN
    (56) expression -> . SMALLER LPAREN statement COMMA statement RPAREN
    (57) expression -> . SUBSTR LPAREN statement COMMA statement RPAREN
    (58) expression -> . RANDOM LPAREN statement RPAREN
    (59) expression -> . MULT LPAREN statement COMMA statement RPAREN
    (60) expression -> . DIV LPAREN statement COMMA statement RPAREN
    (61) expression -> . SUM LPAREN statement COMMA statement RPAREN
    (62) expression -> . LPAREN expression_list RPAREN
    (65) expression -> . BOOLEAN
    (68) expression -> . NUMBER
    (69) expression -> . ID
    (79) procedure_statement -> . PROC ID LPAREN parameter_list RPAREN LBRACKET program RBRACKET SEMI END
    (80) call_statement -> . CALL ID LPAREN parameter_list RPAREN
    (35) def_statement -> . DEF LPAREN ID COMMA statement RPAREN
    (36) put_statement -> . PUT LPAREN ID COMMA statement RPAREN
    (37) add_statement -> . ADD LPAREN ID RPAREN
    (38) add_statement -> . ADD LPAREN ID COMMA statement RPAREN
    (39) continueup_statement -> . CONTINUEUP statement
    (40) continuedown_statement -> . CONTINUEDOWN statement
    (41) continueright_statement -> . CONTINUERIGHT statement
    (42) continueleft_statement -> . CONTINUELEFT statement
    (43) turnright_statement -> . TURNRIGHT statement
    (44) turnleft_statement -> . TURNLEFT statement
    (45) pos_statement -> . POS LPAREN statement COMMA statement RPAREN
    (46) posx_statement -> . POSX statement
    (47) posy_statement -> . POSY statement
    (48) usecolor_statement -> . USECOLOR statement
    (49) down_statement -> . DOWN
    (50) up_statement -> . UP
    (51) beginning_statement -> . BEGINNING
    (70) for_statement -> . FOR ID LPAREN expression TO expression RPAREN LOOP LBRACKET program RBRACKET END LOOP
    (72) case_statement -> . CASE ID when_clauses END CASE
    (73) case_statement -> . CASE ID when_clauses ELSE LBRACKET program RBRACKET END CASE
    (77) repeat_statement -> . REPEAT LBRACKET program RBRACKET UNTIL LBRACKET statement RBRACKET
    (78) while_statement -> . WHILE LBRACKET statement RBRACKET LBRACKET program RBRACKET WHEND

    EQUAL           shift and go to state 26
    AND             shift and go to state 28
    OR              shift and go to state 29
    GREATER         shift and go to state 30
    SMALLER         shift and go to state 31
    SUBSTR          shift and go to state 32
    RANDOM          shift and go to state 33
    MULT            shift and go to state 34
    DIV             shift and go to state 35
    SUM             shift and go to state 36
    LPAREN          shift and go to state 27
    BOOLEAN         shift and go to state 37
    NUMBER          shift and go to state 38
    ID              shift and go to state 39
    PROC            shift and go to state 40
    CALL            shift and go to state 41
    DEF             shift and go to state 42
    PUT             shift and go to state 43
    ADD             shift and go to state 44
    CONTINUEUP      shift and go to state 45
    CONTINUEDOWN    shift and go to state 46
    CONTINUERIGHT   shift and go to state 47
    CONTINUELEFT    shift and go to state 48
    TURNRIGHT       shift and go to state 49
    TURNLEFT        shift and go to state 50
    POS             shift and go to state 51
    POSX            shift and go to state 52
    POSY            shift and go to state 53
    USECOLOR        shift and go to state 54
    DOWN            shift and go to state 55
    UP              shift and go to state 56
    BEGINNING       shift and go to state 57
    FOR             shift and go to state 58
    CASE            shift and go to state 59
    REPEAT          shift and go to state 60
    WHILE           shift and go to state 61

    statement                      shift and go to state 62
    expression                     shift and go to state 3
    procedure_statement            shift and go to state 4
    call_statement                 shift and go to state 5
    def_statement                  shift and go to state 6
    put_statement                  shift and go to state 7
    add_statement                  shift and go to state 8
    continueup_statement           shift and go to state 9
    continuedown_statement         shift and go to state 10
    continueright_statement        shift and go to state 11
    continueleft_statement         shift and go to state 12
    turnright_statement            shift and go to state 13
    turnleft_statement             shift and go to state 14
    pos_statement                  shift and go to state 15
    posx_statement                 shift and go to state 16
    posy_statement                 shift and go to state 17
    usecolor_statement             shift and go to state 18
    down_statement                 shift and go to state 19
    up_statement                   shift and go to state 20
    beginning_statement            shift and go to state 21
    for_statement                  shift and go to state 22
    case_statement                 shift and go to state 23
    repeat_statement               shift and go to state 24
    while_statement                shift and go to state 25

state 2

    (1) program -> statement . SEMI
    (2) program -> statement .

    SEMI            shift and go to state 63
    EQUAL           reduce using rule 2 (program -> statement .)
    AND             reduce using rule 2 (program -> statement .)
    OR              reduce using rule 2 (program -> statement .)
    GREATER         reduce using rule 2 (program -> statement .)
    SMALLER         reduce using rule 2 (program -> statement .)
    SUBSTR          reduce using rule 2 (program -> statement .)
    RANDOM          reduce using rule 2 (program -> statement .)
    MULT            reduce using rule 2 (program -> statement .)
    DIV             reduce using rule 2 (program -> statement .)
    SUM             reduce using rule 2 (program -> statement .)
    LPAREN          reduce using rule 2 (program -> statement .)
    BOOLEAN         reduce using rule 2 (program -> statement .)
    NUMBER          reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    PROC            reduce using rule 2 (program -> statement .)
    CALL            reduce using rule 2 (program -> statement .)
    DEF             reduce using rule 2 (program -> statement .)
    PUT             reduce using rule 2 (program -> statement .)
    ADD             reduce using rule 2 (program -> statement .)
    CONTINUEUP      reduce using rule 2 (program -> statement .)
    CONTINUEDOWN    reduce using rule 2 (program -> statement .)
    CONTINUERIGHT   reduce using rule 2 (program -> statement .)
    CONTINUELEFT    reduce using rule 2 (program -> statement .)
    TURNRIGHT       reduce using rule 2 (program -> statement .)
    TURNLEFT        reduce using rule 2 (program -> statement .)
    POS             reduce using rule 2 (program -> statement .)
    POSX            reduce using rule 2 (program -> statement .)
    POSY            reduce using rule 2 (program -> statement .)
    USECOLOR        reduce using rule 2 (program -> statement .)
    DOWN            reduce using rule 2 (program -> statement .)
    UP              reduce using rule 2 (program -> statement .)
    BEGINNING       reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    CASE            reduce using rule 2 (program -> statement .)
    REPEAT          reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    RBRACKET        reduce using rule 2 (program -> statement .)


state 3

    (5) statement -> expression .
    (28) expression -> expression . PLUS expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . MULT_OP expression
    (31) expression -> expression . DIV_OP expression
    (32) expression -> expression . LT expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . EQUALS expression

    SEMI            reduce using rule 5 (statement -> expression .)
    EQUAL           reduce using rule 5 (statement -> expression .)
    AND             reduce using rule 5 (statement -> expression .)
    OR              reduce using rule 5 (statement -> expression .)
    GREATER         reduce using rule 5 (statement -> expression .)
    SMALLER         reduce using rule 5 (statement -> expression .)
    SUBSTR          reduce using rule 5 (statement -> expression .)
    RANDOM          reduce using rule 5 (statement -> expression .)
    MULT            reduce using rule 5 (statement -> expression .)
    DIV             reduce using rule 5 (statement -> expression .)
    SUM             reduce using rule 5 (statement -> expression .)
    LPAREN          reduce using rule 5 (statement -> expression .)
    BOOLEAN         reduce using rule 5 (statement -> expression .)
    NUMBER          reduce using rule 5 (statement -> expression .)
    ID              reduce using rule 5 (statement -> expression .)
    PROC            reduce using rule 5 (statement -> expression .)
    CALL            reduce using rule 5 (statement -> expression .)
    DEF             reduce using rule 5 (statement -> expression .)
    PUT             reduce using rule 5 (statement -> expression .)
    ADD             reduce using rule 5 (statement -> expression .)
    CONTINUEUP      reduce using rule 5 (statement -> expression .)
    CONTINUEDOWN    reduce using rule 5 (statement -> expression .)
    CONTINUERIGHT   reduce using rule 5 (statement -> expression .)
    CONTINUELEFT    reduce using rule 5 (statement -> expression .)
    TURNRIGHT       reduce using rule 5 (statement -> expression .)
    TURNLEFT        reduce using rule 5 (statement -> expression .)
    POS             reduce using rule 5 (statement -> expression .)
    POSX            reduce using rule 5 (statement -> expression .)
    POSY            reduce using rule 5 (statement -> expression .)
    USECOLOR        reduce using rule 5 (statement -> expression .)
    DOWN            reduce using rule 5 (statement -> expression .)
    UP              reduce using rule 5 (statement -> expression .)
    BEGINNING       reduce using rule 5 (statement -> expression .)
    FOR             reduce using rule 5 (statement -> expression .)
    CASE            reduce using rule 5 (statement -> expression .)
    REPEAT          reduce using rule 5 (statement -> expression .)
    WHILE           reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    RPAREN          reduce using rule 5 (statement -> expression .)
    COMMA           reduce using rule 5 (statement -> expression .)
    RBRACKET        reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 64
    MINUS           shift and go to state 65
    MULT_OP         shift and go to state 66
    DIV_OP          shift and go to state 67
    LT              shift and go to state 68
    GT              shift and go to state 69
    EQUALS          shift and go to state 70


state 4

    (6) statement -> procedure_statement .

    SEMI            reduce using rule 6 (statement -> procedure_statement .)
    EQUAL           reduce using rule 6 (statement -> procedure_statement .)
    AND             reduce using rule 6 (statement -> procedure_statement .)
    OR              reduce using rule 6 (statement -> procedure_statement .)
    GREATER         reduce using rule 6 (statement -> procedure_statement .)
    SMALLER         reduce using rule 6 (statement -> procedure_statement .)
    SUBSTR          reduce using rule 6 (statement -> procedure_statement .)
    RANDOM          reduce using rule 6 (statement -> procedure_statement .)
    MULT            reduce using rule 6 (statement -> procedure_statement .)
    DIV             reduce using rule 6 (statement -> procedure_statement .)
    SUM             reduce using rule 6 (statement -> procedure_statement .)
    LPAREN          reduce using rule 6 (statement -> procedure_statement .)
    BOOLEAN         reduce using rule 6 (statement -> procedure_statement .)
    NUMBER          reduce using rule 6 (statement -> procedure_statement .)
    ID              reduce using rule 6 (statement -> procedure_statement .)
    PROC            reduce using rule 6 (statement -> procedure_statement .)
    CALL            reduce using rule 6 (statement -> procedure_statement .)
    DEF             reduce using rule 6 (statement -> procedure_statement .)
    PUT             reduce using rule 6 (statement -> procedure_statement .)
    ADD             reduce using rule 6 (statement -> procedure_statement .)
    CONTINUEUP      reduce using rule 6 (statement -> procedure_statement .)
    CONTINUEDOWN    reduce using rule 6 (statement -> procedure_statement .)
    CONTINUERIGHT   reduce using rule 6 (statement -> procedure_statement .)
    CONTINUELEFT    reduce using rule 6 (statement -> procedure_statement .)
    TURNRIGHT       reduce using rule 6 (statement -> procedure_statement .)
    TURNLEFT        reduce using rule 6 (statement -> procedure_statement .)
    POS             reduce using rule 6 (statement -> procedure_statement .)
    POSX            reduce using rule 6 (statement -> procedure_statement .)
    POSY            reduce using rule 6 (statement -> procedure_statement .)
    USECOLOR        reduce using rule 6 (statement -> procedure_statement .)
    DOWN            reduce using rule 6 (statement -> procedure_statement .)
    UP              reduce using rule 6 (statement -> procedure_statement .)
    BEGINNING       reduce using rule 6 (statement -> procedure_statement .)
    FOR             reduce using rule 6 (statement -> procedure_statement .)
    CASE            reduce using rule 6 (statement -> procedure_statement .)
    REPEAT          reduce using rule 6 (statement -> procedure_statement .)
    WHILE           reduce using rule 6 (statement -> procedure_statement .)
    $end            reduce using rule 6 (statement -> procedure_statement .)
    RPAREN          reduce using rule 6 (statement -> procedure_statement .)
    COMMA           reduce using rule 6 (statement -> procedure_statement .)
    RBRACKET        reduce using rule 6 (statement -> procedure_statement .)


state 5

    (7) statement -> call_statement .

    SEMI            reduce using rule 7 (statement -> call_statement .)
    EQUAL           reduce using rule 7 (statement -> call_statement .)
    AND             reduce using rule 7 (statement -> call_statement .)
    OR              reduce using rule 7 (statement -> call_statement .)
    GREATER         reduce using rule 7 (statement -> call_statement .)
    SMALLER         reduce using rule 7 (statement -> call_statement .)
    SUBSTR          reduce using rule 7 (statement -> call_statement .)
    RANDOM          reduce using rule 7 (statement -> call_statement .)
    MULT            reduce using rule 7 (statement -> call_statement .)
    DIV             reduce using rule 7 (statement -> call_statement .)
    SUM             reduce using rule 7 (statement -> call_statement .)
    LPAREN          reduce using rule 7 (statement -> call_statement .)
    BOOLEAN         reduce using rule 7 (statement -> call_statement .)
    NUMBER          reduce using rule 7 (statement -> call_statement .)
    ID              reduce using rule 7 (statement -> call_statement .)
    PROC            reduce using rule 7 (statement -> call_statement .)
    CALL            reduce using rule 7 (statement -> call_statement .)
    DEF             reduce using rule 7 (statement -> call_statement .)
    PUT             reduce using rule 7 (statement -> call_statement .)
    ADD             reduce using rule 7 (statement -> call_statement .)
    CONTINUEUP      reduce using rule 7 (statement -> call_statement .)
    CONTINUEDOWN    reduce using rule 7 (statement -> call_statement .)
    CONTINUERIGHT   reduce using rule 7 (statement -> call_statement .)
    CONTINUELEFT    reduce using rule 7 (statement -> call_statement .)
    TURNRIGHT       reduce using rule 7 (statement -> call_statement .)
    TURNLEFT        reduce using rule 7 (statement -> call_statement .)
    POS             reduce using rule 7 (statement -> call_statement .)
    POSX            reduce using rule 7 (statement -> call_statement .)
    POSY            reduce using rule 7 (statement -> call_statement .)
    USECOLOR        reduce using rule 7 (statement -> call_statement .)
    DOWN            reduce using rule 7 (statement -> call_statement .)
    UP              reduce using rule 7 (statement -> call_statement .)
    BEGINNING       reduce using rule 7 (statement -> call_statement .)
    FOR             reduce using rule 7 (statement -> call_statement .)
    CASE            reduce using rule 7 (statement -> call_statement .)
    REPEAT          reduce using rule 7 (statement -> call_statement .)
    WHILE           reduce using rule 7 (statement -> call_statement .)
    $end            reduce using rule 7 (statement -> call_statement .)
    RPAREN          reduce using rule 7 (statement -> call_statement .)
    COMMA           reduce using rule 7 (statement -> call_statement .)
    RBRACKET        reduce using rule 7 (statement -> call_statement .)


state 6

    (8) statement -> def_statement .

    SEMI            reduce using rule 8 (statement -> def_statement .)
    EQUAL           reduce using rule 8 (statement -> def_statement .)
    AND             reduce using rule 8 (statement -> def_statement .)
    OR              reduce using rule 8 (statement -> def_statement .)
    GREATER         reduce using rule 8 (statement -> def_statement .)
    SMALLER         reduce using rule 8 (statement -> def_statement .)
    SUBSTR          reduce using rule 8 (statement -> def_statement .)
    RANDOM          reduce using rule 8 (statement -> def_statement .)
    MULT            reduce using rule 8 (statement -> def_statement .)
    DIV             reduce using rule 8 (statement -> def_statement .)
    SUM             reduce using rule 8 (statement -> def_statement .)
    LPAREN          reduce using rule 8 (statement -> def_statement .)
    BOOLEAN         reduce using rule 8 (statement -> def_statement .)
    NUMBER          reduce using rule 8 (statement -> def_statement .)
    ID              reduce using rule 8 (statement -> def_statement .)
    PROC            reduce using rule 8 (statement -> def_statement .)
    CALL            reduce using rule 8 (statement -> def_statement .)
    DEF             reduce using rule 8 (statement -> def_statement .)
    PUT             reduce using rule 8 (statement -> def_statement .)
    ADD             reduce using rule 8 (statement -> def_statement .)
    CONTINUEUP      reduce using rule 8 (statement -> def_statement .)
    CONTINUEDOWN    reduce using rule 8 (statement -> def_statement .)
    CONTINUERIGHT   reduce using rule 8 (statement -> def_statement .)
    CONTINUELEFT    reduce using rule 8 (statement -> def_statement .)
    TURNRIGHT       reduce using rule 8 (statement -> def_statement .)
    TURNLEFT        reduce using rule 8 (statement -> def_statement .)
    POS             reduce using rule 8 (statement -> def_statement .)
    POSX            reduce using rule 8 (statement -> def_statement .)
    POSY            reduce using rule 8 (statement -> def_statement .)
    USECOLOR        reduce using rule 8 (statement -> def_statement .)
    DOWN            reduce using rule 8 (statement -> def_statement .)
    UP              reduce using rule 8 (statement -> def_statement .)
    BEGINNING       reduce using rule 8 (statement -> def_statement .)
    FOR             reduce using rule 8 (statement -> def_statement .)
    CASE            reduce using rule 8 (statement -> def_statement .)
    REPEAT          reduce using rule 8 (statement -> def_statement .)
    WHILE           reduce using rule 8 (statement -> def_statement .)
    $end            reduce using rule 8 (statement -> def_statement .)
    RPAREN          reduce using rule 8 (statement -> def_statement .)
    COMMA           reduce using rule 8 (statement -> def_statement .)
    RBRACKET        reduce using rule 8 (statement -> def_statement .)


state 7

    (9) statement -> put_statement .
